[added] dos parrafos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Hola</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur, tempore labore quod facere ex ullam blanditiis, facilis nostrum eligendi, quasi consequatur culpa sunt praesentium ut qui. Quod, vel. Ducimus, aperiam.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus necessitatibus perferendis quae accusamus officiis, aut illum dolores enim error ipsum hic. Impedit perspiciatis alias facilis molestiae fugiat corrupti in suscipit?</p>
 
 
 </body>
