h3 agregado Ice & Fire + p

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     <video src="https://www.youtube.com/watch?v=8PAyqFCZYYs">Pokemon movimientos</video>
 
+    <h3>Ice & Fire</h3>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore necessitatibus quae aspernatur perferendis? Blanditiis harum maiores expedita impedit sit odit possimus ex accusantium repellendus fugiat eaque, fugit magni distinctio quam.</p>
+
 
 </body>
 </html>
